# navigation-trial

./: .editorconfig  README.md
.devcontainer/: postCreateCommand.sh
.devcontainer/darwin_arm64/: devcontainer.json  postCreateCommand.sh
.devcontainer/linux_amd64_nvidia/: devcontainer.json  postCreateCommand.sh
gz_ws/: Taskfile.yml
gz_ws/sim/: world.sdf
gz_ws/sim/ground_plane/: model.config  model.sdf
gz_ws/sim/rrbot/: model.config  model.sdf
gz_ws/src/gz_demo/: package.xml  setup.py
gz_ws/src/gz_demo/config/: gz_bridge.yaml  rviz.rviz  vehicle_blue.yaml
gz_ws/src/gz_demo/launch/: a.launch.xml
gz_ws/src/gz_demo/models/: rrbot.urdf
gz_ws/tutorials/: actor.sdf  building_robot.sdf  lidar_node.cc  sdf_world.sdf  sensor_launch.gzlaunch  sensor_tutorial.sdf  tb4.urdf
nav2_ws/: Taskfile.yml
nav_ws/: Taskfile.yml
nav_ws/src/penguin_bringup/: CMakeLists.txt  package.xml
nav_ws/src/penguin_bringup/launch/: park.launch.xml
nav_ws/src/penguin_bringup/worlds/: park.sdf
nav_ws/src/penguin_description/: CMakeLists.txt  package.xml
nav_ws/src/penguin_description/models/penguin/: model.config  model.sdf
nav_ws/src/penguin_description/test/: world.sdf
